--- a/vp-workshop/main/01-setup.html
+++ b/vp-workshop/main/01-setup.html
@@ -51,10 +51,10 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="overview.html">1. Setup</a>
+    <a class="nav-link" href="getting-started.html">1. Getting Started</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="overview.html#prereqs">Pre-Requisites</a>
+    <a class="nav-link" href="getting-started.html#prereqs">Pre-Requisites</a>
   </li>
 </ul>
   </li>
