[CI] Publish Documentation for b75cf76c95bb223cc4bb0f677889b1ef686d1ee7 - b75cf76c95bb223cc4bb0f677889b1ef686d1ee7 🚀

--- a/vp-workshop/main/01-setup.html
+++ b/vp-workshop/main/01-setup.html
@@ -70,6 +70,66 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="patterns.html">Introduction</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#benefits">Benefits of Validated Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#batteries">Batteries Included</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#whotheyfor">Who are the Patterns for</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html">Existing Pattern Landscape</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="landscape.html#website">Where to find existing Patterns</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="tiers.html">Pattern Tiers</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="tiers.html#tiers">Pattern Tiers</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="createConsumePatterns.html">Creating and Consuming Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="createConsumePatterns.html">Exercises</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="secrets.html">Secrets Management</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="secrets.html">Exercises</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="selfContained.html">Self Contained Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="selfContained.html">Exercises</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="gitopsRoughEdges.html">GitOps Rough Edges</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="additionalTopics.html">Additional Resources</a>
+  </li>
 </ul>
   </li>
 </ul>
