[CI] Publish Documentation for ae44d38b8000db55f4ba2209eb1c8b9a1ed2abd7 - ae44d38b8000db55f4ba2209eb1c8b9a1ed2abd7 🚀

--- a/vp-workshop/main/tiers.html
+++ b/vp-workshop/main/tiers.html
@@ -62,19 +62,7 @@
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="02-deploy.html">2. Deploy Service</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="02-deploy.html#package">Build Service</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="02-deploy.html#deploy">Deploy Dervice</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="patterns.html">Introduction</a>
+    <a class="nav-link" href="patterns.html">2. Introduction</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patterns.html#benefits">Benefits of Validated Patterns</a>
@@ -89,7 +77,7 @@
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="landscape.html">Existing Pattern Landscape</a>
+    <a class="nav-link" href="landscape.html">3. Existing Pattern Landscape</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="landscape.html#website">Where to find existing Patterns</a>
@@ -98,7 +86,7 @@
   </li>
   <li class="nav-item is-current-page" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="tiers.html">Pattern Tiers</a>
+    <a class="nav-link" href="tiers.html">4. Pattern Tiers</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="#tiers">Pattern Tiers</a>
@@ -106,31 +94,31 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="createConsumePatterns.html">Creating and Consuming Patterns</a>
+    <a class="nav-link" href="createConsumePatterns.html">5. Creating and Consuming Patterns</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="createConsumePatterns.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="secrets.html">Secrets Management</a>
+    <a class="nav-link" href="secrets.html">6. Secrets Management</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="secrets.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="selfContained.html">Self Contained Patterns</a>
+    <a class="nav-link" href="selfContained.html">7. Self Contained Patterns</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="selfContained.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="gitopsRoughEdges.html">GitOps Rough Edges</a>
+    <a class="nav-link" href="gitopsRoughEdges.html">8. GitOps Rough Edges</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="additionalTopics.html">Additional Resources</a>
+    <a class="nav-link" href="additionalTopics.html">9. Additional Resources</a>
   </li>
 </ul>
   </li>
@@ -147,7 +135,7 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="index.html">Validated Patterns Workshop</a></li>
-    <li><a href="tiers.html">Pattern Tiers</a></li>
+    <li><a href="tiers.html">4. Pattern Tiers</a></li>
   </ul>
 </nav>
   <div class="edit-this-page"><a href="https://github.com/validatedpatterns/workshop/edit/main/documentation/modules/ROOT/pages/tiers.adoc">Edit this Page</a></div>
@@ -164,8 +152,8 @@
 :experimental:</p>
 </div>
 <nav class="pagination">
-  <span class="prev"><a href="landscape.html">Existing Pattern Landscape</a></span>
-  <span class="next"><a href="createConsumePatterns.html">Creating and Consuming Patterns</a></span>
+  <span class="prev"><a href="landscape.html">3. Existing Pattern Landscape</a></span>
+  <span class="next"><a href="createConsumePatterns.html">5. Creating and Consuming Patterns</a></span>
 </nav>
 </article>
 <aside class="toc sidebar" data-title="Contents" data-levels="2">
