--- a/vp-workshop/main/01-setup.html
+++ b/vp-workshop/main/01-setup.html
@@ -60,19 +60,7 @@
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="02-deploy.html">2. Deploy Service</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="02-deploy.html#package">Build Service</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="02-deploy.html#deploy">Deploy Dervice</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="patterns.html">Introduction</a>
+    <a class="nav-link" href="patterns.html">2. Introduction</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patterns.html#benefits">Benefits of Validated Patterns</a>
@@ -87,7 +75,7 @@
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="landscape.html">Existing Pattern Landscape</a>
+    <a class="nav-link" href="landscape.html">3. Existing Pattern Landscape</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="landscape.html#website">Where to find existing Patterns</a>
@@ -96,7 +84,7 @@
   </li>
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="tiers.html">Pattern Tiers</a>
+    <a class="nav-link" href="tiers.html">4. Pattern Tiers</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="tiers.html#tiers">Pattern Tiers</a>
@@ -104,31 +92,31 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="createConsumePatterns.html">Creating and Consuming Patterns</a>
+    <a class="nav-link" href="createConsumePatterns.html">5. Creating and Consuming Patterns</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="createConsumePatterns.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="secrets.html">Secrets Management</a>
+    <a class="nav-link" href="secrets.html">6. Secrets Management</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="secrets.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="selfContained.html">Self Contained Patterns</a>
+    <a class="nav-link" href="selfContained.html">7. Self Contained Patterns</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="selfContained.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="gitopsRoughEdges.html">GitOps Rough Edges</a>
+    <a class="nav-link" href="gitopsRoughEdges.html">8. GitOps Rough Edges</a>
   </li>
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="additionalTopics.html">Additional Resources</a>
+    <a class="nav-link" href="additionalTopics.html">9. Additional Resources</a>
   </li>
 </ul>
   </li>
