--- a/vp-workshop/main/patterns.html
+++ b/vp-workshop/main/patterns.html
@@ -118,7 +118,16 @@
     <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
   </li>
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="additionalTopics.html">9. Additional Resources</a>
+    <a class="nav-link" href="multipleClusters.html">9. Working with Multiple Clusters</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="troubleshooting.html">10. Troubleshooting</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="helm.html">11. Helm for Fun and Profit</a>
+  </li>
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="additionalTopics.html">12. Additional Resources</a>
   </li>
 </ul>
   </li>
