[CI] Publish Documentation for 6277c84dc44d1c388907081a4ba655db6b61b6f2 - 6277c84dc44d1c388907081a4ba655db6b61b6f2 🚀

--- a/vp-workshop/main/getting-started.html
+++ b/vp-workshop/main/getting-started.html
@@ -65,6 +65,12 @@
     <a class="nav-link" href="patterns.html">2. Introduction</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#goals">Validated Patterns Business Goals</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patterns.html#benefits">Benefits of Validated Patterns</a>
   </li>
   <li class="nav-item" data-depth="2">
