--- a/vp-workshop/main/gitopsRoughEdges.html
+++ b/vp-workshop/main/gitopsRoughEdges.html
@@ -65,6 +65,12 @@
     <a class="nav-link" href="patterns.html">2. Introduction</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="patterns.html#goals">Validated Patterns Business Goals</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patterns.html#benefits">Benefits of Validated Patterns</a>
   </li>
   <li class="nav-item" data-depth="2">
@@ -151,15 +157,7 @@
   </div>
   <div class="content">
 <article class="doc">
-<div class="paragraph">
-<p>::moduledir: ..
-:cli: oc
-:branch: main
-:vp-gh-repo: <a href="https://github.com/validatedpatterns" class="bare">https://github.com/validatedpatterns</a>
-:rhocp: Red Hat OpenShift Container Platform
-:source-highlighter: highlightjs
-:experimental:</p>
-</div>
+
 <nav class="pagination">
   <span class="prev"><a href="selfContained.html">7. Self Contained Patterns</a></span>
   <span class="next"><a href="multipleClusters.html">9. Working with Multiple Clusters</a></span>
