--- a/vp-workshop/main/getting-started.html
+++ b/vp-workshop/main/getting-started.html
@@ -82,6 +82,9 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="patternsDemo.html">Demo</a>
+  </li>
+  <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="landscape.html">3. Existing Pattern Landscape</a>
 <ul class="nav-list">
