--- a/vp-workshop/main/index.html
+++ b/vp-workshop/main/index.html
@@ -81,6 +81,9 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="patternsDemo.html">Demo</a>
+  </li>
+  <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="landscape.html">3. Existing Pattern Landscape</a>
 <ul class="nav-list">
@@ -187,12 +190,6 @@
 </li>
 </ul>
 </div>
-</div>
-</div>
-<div class="sect1 tiles browse">
-<h2>Browse modules</h2>
-<div class="sectionbody">
-
 </div>
 </div>
 <nav class="pagination">
