--- a/vp-workshop/main/landscape.html
+++ b/vp-workshop/main/landscape.html
@@ -60,6 +60,10 @@
   </li>
 </ul>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="patterns.html">2. Introduction</a>
@@ -79,20 +83,76 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patterns.html#whotheyfor">Who are the Patterns for</a>
   </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patternsDemo.html">Demo</a>
   </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item is-current-page" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="landscape.html">3. Existing Pattern Landscape</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#patterns">Available Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="#website">Where to find existing Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="#partners">Working with Partners</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="#intel">Intel</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="#intel-mcgo">Intel MultiCloud GitOps</a>
+  </li>
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="#intel-md">Intel Medical Diagnosis</a>
   </li>
 </ul>
   </li>
+  <li class="nav-item is-current-page" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html">Portworx</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="#pwx-mcgo">Portworx</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item is-current-page" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html">Cisco</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="#cisco-pwx-mcgo">Cisco</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item is-current-page" data-depth="3">
+    <a class="nav-link" href="landscape.html">Veeam/Kasten</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="#veeam-mcgo">Veeam/Kasten</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="tiers.html">4. Pattern Tiers</a>
@@ -102,6 +162,10 @@
   </li>
 </ul>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="createConsumePatterns.html">5. Creating and Consuming Patterns</a>
   </li>
@@ -188,6 +252,77 @@
 <p>Working with Partners</p>
 </li>
 </ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_available_validated_patterns"><a class="anchor" href="#_available_validated_patterns"></a>Available Validated Patterns</h2>
+<div class="sectionbody">
+<div id="patterns" class="paragraph">
+<p>The number of available Patterns has significantly increased with more involvement from the field and our partners. Take a look at the following graphic - at the beginning of 2024 we had a few Patterns delivered by our Partners and few more from the Patterns team and field.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="_images/landscape-early24.png" alt="landscape early24">
+</div>
+</div>
+<div class="paragraph">
+<p>As of July 2024 we can see that there has been a significant uptick in activity.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="_images/landscape-july24.png" alt="landscape july24">
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_validated_patterns_website"><a class="anchor" href="#_validated_patterns_website"></a>Validated Patterns WebSite</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The easiest and fastest way to find out what Validated Patterns are available and their availability is to check out the Validated Patterns webiste.</p>
+</div>
+<div id="website" class="paragraph">
+<p>Validated Patterns are an Open Source effort. Information about the Validated Patterns can be found on the <a href="https://validatedpatterns.io">Patterns Website</a>.</p>
+</div>
+<div id="github" class="paragraph">
+<p>The Patterns are also hosted in <a href="https://github.com/validatedpatterns/repositories">GitHub</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_partners"><a class="anchor" href="#_partners"></a>Partners</h2>
+<div class="sectionbody">
+<div id="partners" class="paragraph">
+<p>Partners have taken notice of what Validated Patterns can bring to their organizations. In turn, they have had focused development cycles to deploy their product/features using the Validated Pattners framework. In the following sections we will discuss how a few of our partners have taken advantage of the Validated Patterns framework.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_intel"><a class="anchor" href="#_intel"></a>Intel</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="intel"><a class="anchor" href="#intel"></a>AMX Accelerated Hardware</h3>
+<div id="intel-mcgo" class="imageblock">
+<div class="content">
+<img src="_images/landscape-partner-intel-mcgo.png" alt="Intel AMX Multi-Cloud GitOps">
+</div>
+</div>
+<div id="intel-md" class="imageblock">
+<div class="content">
+<img src="_images/landscape-partner-intel-mcgo.png" alt="Intel AMX Medical Diagnosis">
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_portworx"><a class="anchor" href="#_portworx"></a>Portworx</h2>
+<div class="sectionbody">
+<div id="pwx-mcgo" class="imageblock">
+<div class="content">
+<img src="_images/landscape-partner-portworx.png" alt="Portworx Multi-Cloud GitOps">
+</div>
 </div>
 </div>
 </div>
