--- a/vp-workshop/main/helm.html
+++ b/vp-workshop/main/helm.html
@@ -60,6 +60,10 @@
   </li>
 </ul>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="patterns.html">2. Introduction</a>
@@ -79,20 +83,76 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patterns.html#whotheyfor">Who are the Patterns for</a>
   </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="1">
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="patternsDemo.html">Demo</a>
   </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="landscape.html">3. Existing Pattern Landscape</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="landscape.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="landscape.html#patterns">Available Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="landscape.html#website">Where to find existing Patterns</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html#partners">Working with Partners</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html#intel">Intel</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="landscape.html#intel-mcgo">Intel MultiCloud GitOps</a>
+  </li>
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="landscape.html#intel-md">Intel Medical Diagnosis</a>
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html">Portworx</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="landscape.html#pwx-mcgo">Portworx</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="landscape.html">Cisco</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="landscape.html#cisco-pwx-mcgo">Cisco</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="landscape.html">Veeam/Kasten</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="landscape.html#veeam-mcgo">Veeam/Kasten</a>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="tiers.html">4. Pattern Tiers</a>
@@ -102,6 +162,10 @@
   </li>
 </ul>
   </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="createConsumePatterns.html">5. Creating and Consuming Patterns</a>
   </li>
