--- a/vp-workshop/main/02-deploy.html
+++ b/vp-workshop/main/02-deploy.html
@@ -105,43 +105,46 @@
   </li>
   <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="landscape.html#partners">Working with Partners</a>
+    <a class="nav-link" href="partners.html">Partners</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="3">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="landscape.html#intel">Intel</a>
+    <a class="nav-link" href="partners.html#intel">Intel</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="4">
-    <a class="nav-link" href="landscape.html#intel-mcgo">Intel MultiCloud GitOps</a>
+    <a class="nav-link" href="partners.html#intel-mcgo">Intel MultiCloud GitOps</a>
   </li>
   <li class="nav-item" data-depth="4">
-    <a class="nav-link" href="landscape.html#intel-md">Intel Medical Diagnosis</a>
+    <a class="nav-link" href="partners.html#intel-md">Intel Medical Diagnosis</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="3">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="landscape.html">Portworx</a>
+    <a class="nav-link" href="partners.html">Portworx</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="4">
-    <a class="nav-link" href="landscape.html#pwx-mcgo">Portworx</a>
+    <a class="nav-link" href="partners.html#pwx-mcgo">Portworx</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="3">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="landscape.html">Cisco</a>
+    <a class="nav-link" href="partners.html">Cisco</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="4">
-    <a class="nav-link" href="landscape.html#cisco-pwx-mcgo">Cisco</a>
+    <a class="nav-link" href="partners.html#cisco-pwx-mcgo">Cisco</a>
   </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="landscape.html">Veeam/Kasten</a>
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="partners.html">Veeam/Kasten</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="4">
+    <a class="nav-link" href="partners.html#veeam-mcgo">Veeam/Kasten</a>
   </li>
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="landscape.html#veeam-mcgo">Veeam/Kasten</a>
+</ul>
   </li>
 </ul>
   </li>
