[CI] Publish Documentation for ea13a58128c1227caefbdff9add04ae87399ce06 - ea13a58128c1227caefbdff9add04ae87399ce06 🚀

--- a/vp-workshop/main/landscape.html
+++ b/vp-workshop/main/landscape.html
@@ -161,7 +161,13 @@
     <a class="nav-link" href="tiers.html">4. Pattern Tiers</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="tiers.html#tiers">Pattern Tiers</a>
+    <a class="nav-link" href="tiers.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="tiers.html#about">About the Pattern Tiers</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="tiers.html#resources">Additional Resources</a>
   </li>
 </ul>
   </li>
@@ -243,7 +249,7 @@
 <p>What business problems are being addressed?</p>
 </li>
 <li>
-<p>Whethere VPs are only applicable for the vertical industry the demo was created to show</p>
+<p>Whether VPs are only applicable for the vertical industry the demo was created to show</p>
 </li>
 <li>
 <p>How are they presented to custoemrs</p>
