--- a/vp-workshop/main/tiers.html
+++ b/vp-workshop/main/tiers.html
@@ -161,7 +161,13 @@
     <a class="nav-link" href="tiers.html">4. Pattern Tiers</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#tiers">Pattern Tiers</a>
+    <a class="nav-link" href="#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#about">About the Pattern Tiers</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#resources">Additional Resources</a>
   </li>
 </ul>
   </li>
@@ -227,7 +233,159 @@
   </div>
   <div class="content">
 <article class="doc">
+<div class="sect1">
+<h2 id="_pattern_tiers"><a class="anchor" href="#_pattern_tiers"></a>Pattern Tiers</h2>
+<div class="sectionbody">
 
+</div>
+</div>
+<div class="sect1">
+<h2 id="_objectives"><a class="anchor" href="#_objectives"></a>Objectives</h2>
+<div class="sectionbody">
+<div id="objectives" class="paragraph">
+<p>In this topic we will discuss:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>What are the Validated Pattern Maintenance Tiers?</p>
+<div class="ulist">
+<ul>
+<li>
+<p>What&#8217;s the difference between the tiers?</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Additional information on mainteance tiers and the pattern support policy</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_tiers"><a class="anchor" href="#_tiers"></a>Tiers</h2>
+<div class="sectionbody">
+<div id="about" class="paragraph">
+<p>The different tiers of Validated Patterns are designed to facilitate ongoing maintenance, support, and testing effort for a pattern. To contribute to a pattern that suits your solution or to learn about onboarding your own pattern, understand the following pattern tiers.</p>
+</div>
+<div class="paragraph">
+<p>There are three (3) tiers:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Sandbox</p>
+</li>
+<li>
+<p>Tested</p>
+</li>
+<li>
+<p>Maintained</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Ultimately, the Validated Patterns team don&#8217;t want to be the gatekeepers of all the Patterns that get developed. The emphasis of the tiers is on what the requirements are, not who does the work to meet them.</p>
+</div>
+<div class="sect2">
+<h3 id="_maintenance_tiers_explained"><a class="anchor" href="#_maintenance_tiers_explained"></a>Maintenance Tiers Explained</h3>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top"><strong>Tier</strong></th>
+<th class="tableblock halign-left valign-top"><strong>Description</strong></th>
+<th class="tableblock halign-left valign-top"><strong>More Information</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>Sandbox</code></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
+<ul>
+<li>
+<p>entrypoint for onboarding your Pattern</p>
+</li>
+<li>
+<p>able to deploy onto a freshly install OpenShift cluster without modifications or tuning</p>
+</li>
+<li>
+<p>must include a top-level README</p>
+</li>
+</ul>
+</div></div></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://validatedpatterns.io/learn/sandbox" class="bare">https://validatedpatterns.io/learn/sandbox</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>Tested</code></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
+<ul>
+<li>
+<p>must include a standardized architecture diagram using (or conforming to) the standard Validated Patterns tooling</p>
+</li>
+<li>
+<p>must ensure the test plan passes at least once per quarter</p>
+</li>
+<li>
+<p>must include a written guide for others to follow when demonstrating the platform</p>
+</li>
+</ul>
+</div></div></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://validatedpatterns.io/learn/tested" class="bare">https://validatedpatterns.io/learn/tested</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>Maintained</code></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
+<ul>
+<li>
+<p>functional on all currently supported/extended update support (EUS) versions of OpenShift</p>
+</li>
+<li>
+<p>must fix breakage in a timely mannger</p>
+</li>
+<li>
+<p>must document their support policy</p>
+</li>
+</ul>
+</div></div></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://validatedpatterns.io/learn/maintained" class="bare">https://validatedpatterns.io/learn/maintained</a></p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_additional_resources"><a class="anchor" href="#_additional_resources"></a>Additional Resources</h2>
+<div class="sectionbody">
+<table id="resources" class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 50%;">
+<col style="width: 50%;">
+</colgroup>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Resource</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Location</strong></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>Validated Pattern Tier Types</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://validatedpatterns.io/learn/about-pattern-tiers-types/" class="bare">https://validatedpatterns.io/learn/about-pattern-tiers-types/</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>Implementation Requirements</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://validatedpatterns.io/learn/implementation" class="bare">https://validatedpatterns.io/learn/implementation</a></p></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 <nav class="pagination">
   <span class="prev"><a href="partners.html">Partners</a></span>
   <span class="next"><a href="createConsumePatterns.html">5. Creating and Consuming Patterns</a></span>
