[CI] Publish Documentation for b7355fc2a01082231b7d46a5e0766c38b2e1b24d - b7355fc2a01082231b7d46a5e0766c38b2e1b24d 🚀

--- a/vp-workshop/main/additionalTopics.html
+++ b/vp-workshop/main/additionalTopics.html
@@ -195,7 +195,13 @@
     <a class="nav-link" href="consumingPatterns.html#multiArgos">Multiple Argo&#8217;s</a>
   </li>
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="consumingPatterns.html#exercises">Exercies</a>
+    <a class="nav-link" href="consumingPatterns-valuesFiles.html#values">Pattern Values Files</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns-valuesFiles.html#valuesSecret">Pattern Secret Values Template</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="consumingPatterns.html#exercises">Exercises</a>
   </li>
 </ul>
   </li>
