[CI] Publish Documentation for aa2409413602682fe6713806edc6e76ff51ad47f - aa2409413602682fe6713806edc6e76ff51ad47f 🚀

--- a/vp-workshop/main/consumingPatterns.html
+++ b/vp-workshop/main/consumingPatterns.html
@@ -202,6 +202,15 @@
     <a class="nav-link" href="consumingPatterns-valuesFiles.html#valuesSecret">Pattern Secret Values Template</a>
   </li>
   <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="patternsOperator.html#features">About the Patterns Operator</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="patternsWrapperScript.html#about">About the Patterns.sh wrapper</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="patternsWrapperScript.html#help">Wrapper Help</a>
+  </li>
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#exercises">Exercises</a>
   </li>
 </ul>
